# physicaloptix

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: conf.py  conventions.md  glossary.md  index.md  installation.md  validation.md
docs/examples/: 01_Grids_and_Fields.ipynb  02_Propagators_and_Sampling.ipynb  03_Building_a_Coronagraph.ipynb  04_Wavefront_Error_and_Elements.ipynb  05_Speckles_from_First_Principles.ipynb  06_The_Speckle_Layer_in_Code.ipynb  07_Instrument_Subsystems.ipynb  Basics.ipynb
docs/explanation/: architecture.md  related-work.md
src/physicaloptix/: __init__.py  apertures.py  coronagraph.py  detector.py  diagnostics.py  diff.py  ifs.py  interop.py  linearize.py  multichannel.py  path.py  sources.py  speckle.py  stats.py  system.py  train.py  viz.py  yip.py
src/physicaloptix/core/: __init__.py  field.py  grid.py
src/physicaloptix/data/: eac1_primary.yaml
src/physicaloptix/elements/: __init__.py  base.py  basis.py  modes.py  phase_screen.py  vortex.py  zernike_wfs.py
src/physicaloptix/transforms/: __init__.py  cmft.py  fraunhofer.py  fresnel.py
tests/: conftest.py  test_airy_absolute.py  test_apertures.py  test_basis.py  test_broadband.py  test_cmft.py  test_coronagraph.py  test_detector.py  test_field.py  test_fourier_dm.py  test_fresnel.py  test_gradients.py  test_grid.py  test_ifs.py  test_integration.py  test_jit_consistency.py  test_linearize.py  test_modes.py  test_multichannel.py  test_path.py  test_path_coronagraph.py  test_phase_screen.py  test_speckle.py  test_stats.py  test_system.py  test_train.py  test_viz.py  test_vortex.py  test_vortex_analytic.py  test_yip.py  test_zernike_wfs.py
tests/validation/: test_eac1_broadband.py  test_eac1_gates.py  test_eac1_pupil.py  test_fresnel_validation.py  test_g_export.py  test_yip_cds_crosscheck.py
